--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yu Feng"
-  avatar           : "profile.png"
+  avatar           : "IMG_1255.JPG"
   bio              : "Second-year Master Student at Duke"
   location         : "Durham, NC"
   employer         :
