--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yu Feng"
-  avatar           : "7.png"
+  avatar           : "bio-photo.jpg"
   bio              : "Master Student at Duke"
   location         : "Durham, NC"
   employer         :
