--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Yu Feng"
-  avatar           : "bio-photo.jpg"
-  bio              : "Master Student at Duke"
+  avatar           : "7.png"
+  bio              : "Passion for responsible NLP"
   location         : "Durham, NC"
   employer         :
   pubmed           : 
