--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Yu Feng"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://annieyufeng.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://annieyufeng.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/yu-annie-feng-50b737161/"
+  linkedin         : "yu-annie-feng-50b737161/"
   orcid            :
   pinterest        :
   soundcloud       :
