--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Yu Feng"
   avatar           : "7.png"
   bio              : "Passion for responsible NLP"
-  location         : "Durham, NC"
+  location         : "Philadelphia, PA"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=A7D6qK4AAAAJ"
