--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Philadelphia, PA"
   employer         :
   pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?hl=en&user=A7D6qK4AAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?hl=en&user=qeFh4NsAAAAJ&view_op=list_works&authuser=1"
   email            : "fengyu1@seas.upenn.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
