--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yu Feng"
-  avatar           : "7.png"
+  avatar           : "yu_feng.jpg"
   bio              : "Passion for responsible NLP"
   location         : "Philadelphia, PA"
   employer         :
