--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         : "yu-annie-feng-50b737161/"
+  linkedin         : "yu-feng-50b737161/"
   orcid            :
   pinterest        :
   soundcloud       :
