--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Yu Feng"
   avatar           : "yu_feng.jpg"
-  bio              : "Passion for responsible NLP"
+  bio              : "Passion for reliable NLP"
   location         : "Philadelphia, PA"
   employer         :
   pubmed           : 
